# WindowsPowerShell

./: .gitignore  .xkit  API.md  ARCHITECTURE.md  AUTOSTART_IMPLEMENTATION.md  AUTOSTART_README.md  AUTOSTART_STATUS_EXPLANATION.md  BENCHMARK_REPORT.md  BRANCHING_STRATEGY.md  BUG_FIX_PROMPT_SUCCESS.md  CHANGELOG.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_TASKS.md  CONTRIBUTING.md  FINAL_IMPLEMENTATION_SUCCESS.md  INSTALL.md  ISSUE.md  LICENSE  MCP_TELEGRAM_IMPLEMENTATION.md  MIGRATION_PLAN.md  Microsoft.PowerShell_profile.ps1  Microsoft.PowerShell_profile.ps1.backup  Microsoft.PowerShell_profile_ascii.ps1  Microsoft.PowerShell_profile_working.ps1  README.md  RELEASE_NOTES_v2.1.2.md  RELEASE_NOTES_v3.0.0.md  ROADMAP.md  SYSTEM_ANALYSIS_REPORT.md  TROUBLESHOOTING.md  USAGE.md  XKIT_FINAL_TESTS.md  benchmark_simple.ps1  benchmark_xkit.ps1  benchmark_xkit.py  clean-autostart.ps1  install-autostart-complete.ps1  install-autostart-simple.ps1  install-autostart.ps1  install-xkit-v3.ps1  (+21 more)
.github/: copilot-instructions.md  copilot-pr-hybrid-mcp.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  mcp_server_development.yml  plugin_development.yml
.github/workflows/: release.yml  validation.yml
.xkit/plugins/: README.md
.xkit/plugins/project-analyzer/: README.md  __init__.py  plugin.json  plugin.py
.xkit/plugins/telegram/: README.md  __init__.py  plugin.json  plugin.py
Scripts/: project-analyzer-commands.ps1  xkit_compact.py  xkit_main.py  xkit_main_old.py
Scripts/telegram/legacy/: anti-spam.py  bot-listener.py  diagnostics.py  ping-pong.py  status.py
Scripts/tools/: test-prompt.py  xkit-final-validator.py
Scripts/xkit/: __init__.py
Scripts/xkit/adapters/: __init__.py
Scripts/xkit/adapters/cli/: __init__.py  command_adapter.py  powershell_adapter.py
Scripts/xkit/application/: __init__.py  use_cases.py
Scripts/xkit/config/: config.example.json  config.json
Scripts/xkit/core/: __init__.py  application.py  container.py
Scripts/xkit/core/ports/: __init__.py  ai_port.py  command_port.py  config_port.py  container_port.py  display_port.py  event_port.py  filesystem_port.py  git_port.py  mcp_port.py  plugin_port.py  telegram_port.py
Scripts/xkit/domain/: __init__.py  entities.py  interfaces.py
Scripts/xkit/events/: __init__.py  bus.py  events.py
Scripts/xkit/events/handlers/: __init__.py
Scripts/xkit/infrastructure/: __init__.py  ai_service.py  compact_display.py  config.py  container.py  display.py  environment.py  error_handler.py  filesystem.py  git.py  git_branch_manager.py  project_analyzer.py  telegram_service.py
Scripts/xkit/mcp/: client.py  config.json  protocol.py
Scripts/xkit/mcp/servers/: ai_server.py  core_server.py  git_server.py  project_analyzer_server.py  telegram_server.py
Scripts/xkit/plugins/: base.py  loader.py  manager.py  project_analyzer_plugin.py  telegram_plugin.py
Scripts/xkit/plugins/core/: __init__.py
Scripts/xkit/plugins/integrations/: telegram_integration.py
docs/: README.md
docs/api/: cli-commands.md  core-api.md  event-api.md  mcp-protocol.md  plugin-api.md
docs/architecture/: README.md
docs/development/: code-organization.md  contributing.md  mcp-server-development.md  plugin-development.md  plugin-standards.md  testing.md
docs/plugins/: project-analyzer-plugin.md  telegram-plugin.md
oh-my-xkit/: oh-my-xkit.ps1  xkit-help.ps1
oh-my-xkit/plugins/: command-wrapper.ps1  error-handler-simple.ps1  error-handler.ps1
oh-my-xkit/plugins/ai-assistant/: ai-assistant.plugin.ps1
oh-my-xkit/plugins/docker/: docker.plugin.ps1
oh-my-xkit/plugins/git/: git.plugin.ps1
oh-my-xkit/plugins/telegram-notifier/: telegram-notifier.plugin.ps1
oh-my-xkit/themes/: classic-xkit.ps1  minimal-xkit.ps1  powerlevel10k-xkit.ps1
templates/: README.md  plugin_documentation.md  plugin_template.py
tests/: README.md  quick_mcp_test.py  run_all_tests.py  test_gemini_fixed.py  test_telegram.py  test_telegram_mcp.py
