[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xkit"
version = "3.0.0"
description = "Enhanced PowerShell Framework with Hybrid MCP Architecture"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "XKit Development Team", email = "dev@xkit.framework"}
]
maintainers = [
    {name = "XKit Development Team", email = "dev@xkit.framework"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
    "Topic :: Software Development :: Build Tools",
    "Framework :: AsyncIO",
]
keywords = ["powershell", "framework", "mcp", "plugins", "automation", "ai", "telegram", "git"]
requires-python = ">=3.11"
dependencies = [
    "asyncio-mqtt>=0.13.0",
    "python-telegram-bot>=20.6",
    "aiofiles>=23.2.1",
    "psutil>=5.9.6",
    "pydantic>=2.4.2",
    "jsonschema>=4.19.2",
    "websockets>=11.0.3",
    "google-generativeai>=0.3.0",
    "openai>=1.3.7",
    "anthropic>=0.7.7",
    "pandas>=2.1.3",
    "numpy>=1.25.2",
    "python-dateutil>=2.8.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "colorama>=0.4.6",
    "rich>=13.7.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    "httpx>=0.25.2",
    "pathlib2>=2.3.7",
    "watchdog>=3.0.0",
    "GitPython>=3.1.40",
    "dulwich>=0.21.6",
    "docker>=6.1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.3.1",
    "black>=23.9.1",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.6.1",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.5",
    "pre-commit>=3.5.0",
]
ai = [
    "google-generativeai>=0.3.0",
    "openai>=1.3.7",
    "anthropic>=0.7.7",
]
telegram = [
    "python-telegram-bot>=20.6",
]
container = [
    "docker>=6.1.3",
]
docs = [
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
    "myst-parser>=2.0.0",
]
all = [
    "google-generativeai>=0.3.0",
    "openai>=1.3.7",
    "anthropic>=0.7.7", 
    "python-telegram-bot>=20.6",
    "docker>=6.1.3",
    "sphinx>=7.2.6",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/rootkit-original/WindowsPowerShell"
Documentation = "https://github.com/rootkit-original/WindowsPowerShell/blob/main/docs/README.md"
Repository = "https://github.com/rootkit-original/WindowsPowerShell.git"
"Bug Reports" = "https://github.com/rootkit-original/WindowsPowerShell/issues"
Changelog = "https://github.com/rootkit-original/WindowsPowerShell/blob/main/CHANGELOG.md"

[project.scripts]
xkit = "xkit_main:main"
xkit-mcp = "xkit.mcp.client:main"
xkit-plugin = "xkit.plugins.manager:main"

[tool.setuptools]
package-dir = {"" = "Scripts"}

[tool.setuptools.packages.find]
where = ["Scripts"]
include = ["xkit*"]
exclude = ["tests*", "__pycache__*"]

[tool.setuptools.package-data]
xkit = [
    "config/*.json",
    "mcp/config.json", 
    "mcp/servers/*.py",
    "plugins/core/*.py",
    "plugins/integrations/*.py",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

# isort configuration  
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["xkit"]

# MyPy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

# Coverage configuration
[tool.coverage.run]
source = ["Scripts/xkit"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/.*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]